[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scene/Map/Map1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scene/Sup/GameScene.gd" type="Script" id=2]
[ext_resource path="res://Assets/HUD/G.png" type="Texture" id=3]
[ext_resource path="res://Assets/Buildings/Tower/S_Tower.png" type="Texture" id=4]
[ext_resource path="res://Scene/Sup/UI.gd" type="Script" id=5]
[ext_resource path="res://Assets/Buildings/Tower/R_Tower.png" type="Texture" id=6]
[ext_resource path="res://Assets/Buildings/Tower/G_Tower.png" type="Texture" id=7]
[ext_resource path="res://Scene/Sup/Camera2D.gd" type="Script" id=8]
[ext_resource path="res://Scene/Sup/CardManager.gd" type="Script" id=9]
[ext_resource path="res://Assets/HUD/Slow.png" type="Texture" id=10]
[ext_resource path="res://Assets/HUD/forward.png" type="Texture" id=11]
[ext_resource path="res://Assets/HUD/fastForward.png" type="Texture" id=12]
[ext_resource path="res://Assets/HUD/blue_button03.png" type="Texture" id=13]
[ext_resource path="res://Assets/HUD/barsHorizontal.png" type="Texture" id=14]
[ext_resource path="res://Scene/Sup/InGameMenu.tscn" type="PackedScene" id=15]

[node name="GameScene" type="Node2D"]
script = ExtResource( 2 )

[node name="Map1" parent="." instance=ExtResource( 1 )]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 5 )

[node name="HUD" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="BuildMenu" type="HBoxContainer" parent="UI/HUD"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -117.0
margin_right = 126.0
margin_bottom = -23.0
rect_min_size = Vector2( 100, 0 )
custom_constants/separation = 10
__meta__ = {
"_edit_group_": true
}

[node name="Turret" type="TextureButton" parent="UI/HUD/BuildMenu" groups=["build_buttons"]]
margin_top = 23.0
margin_right = 48.0
margin_bottom = 71.0
rect_min_size = Vector2( 48, 48 )
hint_tooltip = "Name: Turret
Health: 100
Damage: 10
Atack cd: 0.1
Range: 300
Bullet spread: 30

Cost: 20"
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 3 )
expand = true

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildMenu/Turret"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true

[node name="Sniper" type="TextureButton" parent="UI/HUD/BuildMenu" groups=["build_buttons"]]
margin_left = 58.0
margin_top = 23.0
margin_right = 106.0
margin_bottom = 71.0
rect_min_size = Vector2( 48, 48 )
hint_tooltip = "Name: Sniper
Health: 60
Damage: 20
Atack cd: 2.0
Range: 800
Bullet spread: 0

Cost: 40"
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 3 )
expand = true

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildMenu/Sniper"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true

[node name="Rocket" type="TextureButton" parent="UI/HUD/BuildMenu" groups=["build_buttons"]]
margin_left = 116.0
margin_top = 23.0
margin_right = 164.0
margin_bottom = 71.0
rect_min_size = Vector2( 48, 48 )
hint_tooltip = "Name: Rocket Launcher
Health: 60
Damage: 20
Atack cd: 4.0
Range: 600
Bullet spread: 0

Cost: 60"
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 3 )
expand = true

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildMenu/Rocket"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true

[node name="Build" type="TextureButton" parent="UI/HUD"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -24.0
margin_right = 120.0
toggle_mode = true
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="UI/HUD/Build"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = 1.0
margin_bottom = 1.0
text = "BUILD"
align = 1
valign = 1

[node name="GameContorls" type="HBoxContainer" parent="UI/HUD"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -212.0
margin_top = -40.0
grow_horizontal = 0
alignment = 2

[node name="NextWave" type="TextureButton" parent="UI/HUD/GameContorls"]
margin_top = 10.0
margin_right = 80.0
margin_bottom = 30.0
rect_min_size = Vector2( 80, 20 )
size_flags_vertical = 4
texture_normal = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="UI/HUD/GameContorls/NextWave"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Next Wave"
align = 1
valign = 1

[node name="SpeedDown" type="TextureButton" parent="UI/HUD/GameContorls"]
margin_left = 84.0
margin_right = 124.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 10 )
texture_normal = ExtResource( 3 )
expand = true

[node name="TextureRect" type="TextureRect" parent="UI/HUD/GameContorls/SpeedDown"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 10 )
expand = true

[node name="Play" type="TextureButton" parent="UI/HUD/GameContorls"]
margin_left = 128.0
margin_right = 168.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 10 )
texture_normal = ExtResource( 13 )
expand = true

[node name="TextureRect" type="TextureRect" parent="UI/HUD/GameContorls/Play"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 11 )
expand = true

[node name="SpeedUp" type="TextureButton" parent="UI/HUD/GameContorls"]
margin_left = 172.0
margin_right = 212.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 10 )
texture_normal = ExtResource( 3 )
expand = true

[node name="TextureRect" type="TextureRect" parent="UI/HUD/GameContorls/SpeedUp"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 12 )
expand = true

[node name="InfoBar" type="ColorRect" parent="UI/HUD"]
self_modulate = Color( 0, 0, 0, 0.470588 )
anchor_right = 1.0
rect_min_size = Vector2( 0, 60 )

[node name="H" type="HBoxContainer" parent="UI/HUD/InfoBar"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Icon" type="Label" parent="UI/HUD/InfoBar/H"]
margin_top = 23.0
margin_right = 60.0
margin_bottom = 37.0
rect_min_size = Vector2( 60, 0 )
text = "Money:"
align = 2
valign = 1

[node name="Cash" type="Label" parent="UI/HUD/InfoBar/H"]
margin_left = 64.0
margin_top = 23.0
margin_right = 124.0
margin_bottom = 37.0
rect_min_size = Vector2( 60, 0 )
text = "100"

[node name="Icon2" type="Label" parent="UI/HUD/InfoBar/H"]
margin_left = 128.0
margin_top = 23.0
margin_right = 188.0
margin_bottom = 37.0
rect_min_size = Vector2( 60, 0 )
text = "Influence"
align = 2
valign = 1

[node name="Influence" type="Label" parent="UI/HUD/InfoBar/H"]
margin_left = 192.0
margin_top = 23.0
margin_right = 252.0
margin_bottom = 37.0
rect_min_size = Vector2( 60, 0 )
text = "100"

[node name="Wave2" type="Label" parent="UI/HUD/InfoBar/H"]
margin_left = 256.0
margin_top = 23.0
margin_right = 346.0
margin_bottom = 37.0
rect_min_size = Vector2( 60, 0 )
text = "Current Wave:"
align = 2

[node name="Wave" type="Label" parent="UI/HUD/InfoBar/H"]
margin_left = 350.0
margin_top = 23.0
margin_right = 410.0
margin_bottom = 37.0
rect_min_size = Vector2( 60, 0 )
text = "0"

[node name="Enemy2" type="Label" parent="UI/HUD/InfoBar/H"]
margin_left = 414.0
margin_top = 23.0
margin_right = 510.0
margin_bottom = 37.0
rect_min_size = Vector2( 60, 0 )
text = "Enemy remain:"
align = 2

[node name="Enemy" type="Label" parent="UI/HUD/InfoBar/H"]
margin_left = 514.0
margin_top = 23.0
margin_right = 574.0
margin_bottom = 37.0
rect_min_size = Vector2( 60, 0 )
text = "0"

[node name="Cards" type="TextureButton" parent="UI/HUD"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -24.0
margin_right = 60.0
toggle_mode = true
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="UI/HUD/Cards"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = 1.0
margin_bottom = 1.0
text = "Cards"
align = 1
valign = 1

[node name="CardManager" type="HBoxContainer" parent="UI/HUD"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -180.0
margin_bottom = -25.0
grow_vertical = 0
mouse_filter = 2
custom_constants/separation = 13
alignment = 1
script = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="TextureButton" type="TextureButton" parent="UI/HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
texture_normal = ExtResource( 14 )
expand = true

[node name="InGameMenu" parent="UI/HUD" instance=ExtResource( 15 )]
visible = false

[node name="Camera2D" type="Camera2D" parent="."]
current = true
script = ExtResource( 8 )

[connection signal="pressed" from="UI/HUD/Build" to="UI" method="_on_Build_pressed"]
[connection signal="pressed" from="UI/HUD/GameContorls/NextWave" to="UI" method="_on_NextWave_pressed"]
[connection signal="pressed" from="UI/HUD/GameContorls/SpeedDown" to="UI" method="_on_SpeedDown_pressed"]
[connection signal="pressed" from="UI/HUD/GameContorls/Play" to="UI" method="_on_Play_pressed"]
[connection signal="pressed" from="UI/HUD/GameContorls/SpeedUp" to="UI" method="_on_SpeedUp_pressed"]
[connection signal="pressed" from="UI/HUD/Cards" to="UI" method="_on_Cards_pressed"]
[connection signal="pressed" from="UI/HUD/TextureButton" to="UI" method="_on_TextureButton_pressed"]
